--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Ecex
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ht/VwKWoOruECr2YjJAfNzQv0dNm1qjfquj164Ax+3Y=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -12,7 +12,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=ecex
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Jakoloco23@
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=mail.ecex-portal.org
+MAIL_PORT=587
+MAIL_USERNAME=do-not-reply@ecex-portal.org
+MAIL_PASSWORD=O1v_jr45
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=do-not-reply@ecex-portal.org
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
