--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,8 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
-        #Options -MultiViews
+        Options -MultiViews
+        Options +FollowSymLinks
+        Require all granted
     </IfModule>
 
     RewriteEngine On
@@ -30,4 +32,6 @@
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    
+    php_value memory_limit 512M
 </IfModule>
