--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
-        "symfony/http-client": "^6.0",
-        "symfony/mailgun-mailer": "^6.0"
+        "symfony/http-client": "^6.1",
+        "symfony/mailgun-mailer": "^6.1",
+        "symfony/postmark-mailer": "^6.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
